@@ -6,7 +6,7 @@
 
 clear
 
-TOMCAT_VER=6.0.36
+TOMCAT_VER=6.0.37
 SOLR_VER=3.6.2
 EXT_SOLR_VER=2.9
 EXT_SOLR_PLUGIN_VER=1.2.0
