@@ -1,3 +1,7 @@
+2013-05-28  Stefan Sprenger  <stefan.sprenger@dkd.de>
+
+  * Changed install script to install Apache Tomcat 6.0.37
+
 2013-04-15  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed bug #44167: solr ping fails
